# django-blog-app

./: .env.example  .gitignore  README.md  pyproject.toml
blog_app/blog/: admin.py  forms.py  models.py  urls.py  views.py
blog_app/blog/migrations/: 0001_initial.py  0002_initial.py  0003_post_slug.py  0004_post_image.py  0005_alter_post_image.py  0006_alter_post_image_comment.py  0007_category.py  0008_post_category.py  0009_alter_category_options_alter_comment_options_and_more.py  0010_alter_category_slug_alter_post_slug.py
blog_app/blog/static/css/: custom.css
blog_app/blog/static/js/: script.js
blog_app/blog/templates/blog/: base.html  blog_posts.html  detail.html  edit.html  home.html  navbar.html
blog_app/blog/templates/blog/inc/: _archives.html  _categories.html  _recent_posts.html
blog_app/blog/templatetags/: paginator_tags.py  sidebar_tags.py
blog_app/blog_app/: settings.py  urls.py
blog_app/core/: models.py
blog_app/core/migrations/: 0002_user_avatar.py  0003_alter_user_avatar.py
blog_app/static/css/: custom.css  ionicons.min.css
blog_app/templates/: base.html
blog_app/templates/inc/: _footer.html  _header.html  _mobile_menu.html  _navbar.html  _paginator.html  _pc_menu.html  _search.html
blog_app/templatetags/: menu_tags.py
blog_app/users/: forms.py  models.py  urls.py  views.py
blog_app/users/migrations/: 0001_initial.py  0002_user_avatar.py  0003_alter_user_avatar.py
blog_app/users/templates/users/: detail.html  edit.html  login.html  register.html
